@@ -25,6 +25,7 @@ Initial inclusion of the stylizer plugin to create user customizable styles from
 #711664 by meclimdul: Make the 'hook' version of plugins now optional and improve code around it.
 #745468 by alevine and Scott Reynolds: Make ajax better able to know what .js/.css was already on the page.
 #722246: Search tabs not quite right, particularly with retaining keywords across tabs. This mostly fixes.
+#709754 followup by yhahn: Improved documentation for export.inc
 
 ctools 6.x-1.3 (2010-Feb-01)
 ==============
